# progetto-SistemiOperativi

./: CMakeLists.txt  README.md
Documentazione/: Relazione.aux  Relazione.fdb_latexmk  Relazione.fls  Relazione.out  Relazione.tex  Relazione.toc  end.aux
include/: shared.h
project/: compile.sh
project/include/: sha256_utils.h
project/src/: server.c  sha256_utils.c
src/: client.c  server.c  sha256_utils.c
